k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vertexerp-production
  labels:
    name: vertexerp-production
    environment: production
    security-zone: restricted
