k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vertexerp-api-svc
  namespace: vertexerp-production
  labels:
    app: vertexerp-api
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: vertexerp-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: vertexerp-web-svc
  namespace: vertexerp-production
  labels:
    app: vertexerp-web
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: vertexerp-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
